fix: Wrap buttons

--- a/src/app/[network]/page.module.css
+++ b/src/app/[network]/page.module.css
@@ -1,6 +1,6 @@
 .dot {
-  height: 10px;
-  width: 10px;
+  height: 7px;
+  width: 7px;
   margin: auto;
   margin-top: .5rem;
   border-radius: 50%;
